Make it possible to configure AWS region and jlink modules.